--- a/TurnMyStringInto/Views/Home/Index.cshtml
+++ b/TurnMyStringInto/Views/Home/Index.cshtml
@@ -1,38 +1,50 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<input id="text" name="text" type="text" value="" />
-<button id="translate">Submit</button>
-<select class="form-control" id="translatorId">
-    <option value="klingon.json">Klingon</option>
-    <option value="yoda.json">Yoda</option>
-    <option value="leetspeak.json">leetspeak</option>
-</select>
+<p style="padding-top:5px"></p>
+<div class="form-group">
+    <div class="tt-container">
+        <input class="form-control" id="text" name="text" type="text" value="" />
+    </div>
+</div>
+
+<div class="form-group">
+    <select class="form-control" id="translatorId">
+        <option value="klingon.json">Klingon</option>
+        <option value="yoda.json">Yoda</option>
+        <option value="leetspeak.json">leetspeak</option>
+    </select>
+</div>
+
+<button class="btn btn-primary" id="translate">Submit</button>
 
 <h3><span id="message"></span></h3>
+
 @section scripts
 {
     <script>
-        $(document).ready(function () {
-            var wynik;
-            $("#translate").on("click",function()
-            {
-                var translatorType=$("#translatorId").val();
-                var textToTranslate=$("#text").val()
-                $.ajax({
-                    url: "http://api.funtranslations.com/translate/"+translatorType+"?text=" +textToTranslate,
-                    method: "GET",
-                    success: function (data) {
-                        wynik=data;
-                        $("#message").append(wynik.contents.translated);
-                    },
-                    error: function (data) {
-                        wynik = data.responseJSON;
-                    $("#message").append(wynik.error.message);
-                }
-                })
+            $(document).ready(function () {
+                var successResponse;
+                var errorResponse;
+                $("#translate").on("click", function () {
+                    var translatorType = $("#translatorId").val();
+                    var textToTranslate = $("#text").val()
+                    $.ajax({
+                        url: "http://api.funtranslations.com/translate/" + translatorType + "?text=" + textToTranslate,
+                        method: "GET",
+                        success: function (data) {
+                            successResponse = data;
+                            $("span").html("");
+                            $("#message").append(successResponse.contents.translated);
+                        },
+                        error: function (data) {
+                            errorResponse = data.responseJSON;
+                            $("span").html("");
+                            $("#message").append(errorResponse.error.message);
+                        }
+                    })
 
+                })
             })
-        })
     </script>
 }
